syntax = "proto3";

package main;

option go_package = "./proto";

// 添加品牌表
message AddBrandReq {
  int64 id = 1; //
  string name = 2; //品牌名称
  string first_letter = 3; //首字母
  int32 sort = 4; //排序
  int32 factory_status = 5; //是否为品牌制造商：0->不是；1->是
  int32 show_status = 6; //品牌显示状态
  int32 recommend_status = 7; //推荐状态
  int32 product_count = 8; //产品数量
  int32 product_comment_count = 9; //产品评论数量
  string logo = 10; //品牌logo
  string big_pic = 11; //专区大图
  string brand_story = 12; //品牌故事
  string create_by = 13; //创建者
}

message AddBrandResp {
  int64 brand_id = 1;
}

// 删除品牌表
message DeleteBrandReq {
  repeated int64 ids = 1;
}

message DeleteBrandResp {
  string pong = 1;
}

// 更新品牌表
message UpdateBrandReq {
  int64 id = 1; //
  string name = 2; //品牌名称
  string first_letter = 3; //首字母
  int32 sort = 4; //排序
  int32 factory_status = 5; //是否为品牌制造商：0->不是；1->是
  int32 show_status = 6; //品牌显示状态
  int32 recommend_status = 7; //推荐状态
  int32 product_count = 8; //产品数量
  int32 product_comment_count = 9; //产品评论数量
  string logo = 10; //品牌logo
  string big_pic = 11; //专区大图
  string brand_story = 12; //品牌故事
  string update_by = 15; //更新者


}

message UpdateBrandResp {
  string pong = 1;
}



// 查询品牌表详情
message QueryBrandDetailReq {
    int64 id = 1;
}

message QueryBrandDetailResp {
  int64 id = 1; //
  string name = 2; //品牌名称
  string first_letter = 3; //首字母
  int32 sort = 4; //排序
  int32 factory_status = 5; //是否为品牌制造商：0->不是；1->是
  int32 show_status = 6; //品牌显示状态
  int32 recommend_status = 7; //推荐状态
  int32 product_count = 8; //产品数量
  int32 product_comment_count = 9; //产品评论数量
  string logo = 10; //品牌logo
  string big_pic = 11; //专区大图
  string brand_story = 12; //品牌故事
  string create_by = 13; //创建者
  string create_time = 14; //创建时间
  string update_by = 15; //更新者
  string update_time = 16; //更新时间

}

// 分页查询品牌表列表
message QueryBrandListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int32 factory_status = 3; //是否为品牌制造商：0->不是；1->是
  int32 recommend_status = 4; //推荐状态
  int32 show_status = 5; //品牌显示状态
  string name = 6; //品牌名称
}

message BrandListData {
  int64 id = 1; //
  string name = 2; //品牌名称
  string first_letter = 3; //首字母
  int32 sort = 4; //排序
  int32 factory_status = 5; //是否为品牌制造商：0->不是；1->是
  int32 show_status = 6; //品牌显示状态
  int32 recommend_status = 7; //推荐状态
  int32 product_count = 8; //产品数量
  int32 product_comment_count = 9; //产品评论数量
  string logo = 10; //品牌logo
  string big_pic = 11; //专区大图
  string brand_story = 12; //品牌故事
  string create_by = 13; //创建者
  string create_time = 14; //创建时间
  string update_by = 15; //更新者
  string update_time = 16; //更新时间

}

message QueryBrandListResp {
  int64 total = 1;
  repeated  BrandListData list = 2;
}

message QueryBrandListByIdsReq {
  repeated int64 ids = 1;
}
message UpdateBrandShowStatusReq {
  repeated int64    Ids = 1;
  int32    ShowStatus = 2;
}


message UpdateBrandFactoryStatusReq {
  repeated int64    Ids = 1;
  int32    FactoryStatus = 2;
}

message UpdateBrandRecommendStatusReq {
  repeated int64    Ids = 1;
  int32    RecommendStatus = 2;
}

message UpdateBrandStatusResp {
  string pong = 1;
}

// 品牌表
service BrandService {
  // 添加品牌表
  rpc AddBrand(AddBrandReq) returns (AddBrandResp){}
  // 删除品牌表
  rpc DeleteBrand(DeleteBrandReq) returns (DeleteBrandResp){}
  // 更新品牌表
  rpc UpdateBrand(UpdateBrandReq) returns (UpdateBrandResp ){}
  // 查询品牌表详情
   rpc QueryBrandDetail(QueryBrandDetailReq) returns (QueryBrandDetailResp){}
  // 查询品牌表列表
  rpc QueryBrandList(QueryBrandListReq) returns (QueryBrandListResp){}

  rpc QueryBrandListByIds(QueryBrandListByIdsReq) returns(QueryBrandListResp);
  //更新品牌的显示状态
  rpc UpdateBrandShowStatus(UpdateBrandShowStatusReq) returns(UpdateBrandStatusResp);
  //更新品牌是否为品牌制造商
  rpc UpdateBrandFactoryStatus(UpdateBrandFactoryStatusReq) returns(UpdateBrandStatusResp);
  //更新品牌的推荐状态
  rpc UpdateBrandRecommendStatus(UpdateBrandRecommendStatusReq) returns(UpdateBrandStatusResp);

}
